2008-01-28  Joerg Jaspert  <joerg@debian.org>

	* rails/app/views/pentabarf/_conference_export.rxml: Add
	reconfirmation toggle

	* rails/app/controllers/submission_controller.rb
	(SubmissionController::save_person): Save the attend flag.

	* rails/app/controllers/pentabarf_controller.rb
	(PentabarfController::save_person): Save the attend flag

2008-01-27  Joerg Jaspert  <joerg@debian.org>

	* rails/app/views/user/new_account.rxml: Add "Please use Debian
	email" text.

	* rails/app/views/user/index.rxml: Language changes

	* rails/app/views/submission/_person_general.rxml: Add proceedings flag
	Add assassins flag
	Add person_type
	Add t_shirt_sizes
	Add food selection
	Add daytrip select
	Add computer select

	* rails/app/views/pentabarf/_person_general.rxml: dito
	dito
	Add person_type
	Add t_shirt_sizes
	Add food selection
	Add daytrip select
	Add computer select

	* sql/functions/log/activate_logging.sql: Also log in schema debconf

	* rails/app/views/pentabarf/_person_contact.rxml: Add emergency
	contact

	* rails/app/controllers/pentabarf_controller.rb
	(PentabarfController::person): Add @dc_person
	(PentabarfController::save_event): Save event license
	(PentabarfController::save_person): Save dc_person and dc_conference_person
	(PentabarfController::save_person): Make sure boolean fields get
	saved if toggled off

	* rails/app/views/submission/_person_travel.rxml: Add
	f_public_data and accommodation selection, hide upstreams
	accommodation box.
	Rename f_public_data to public_data

	* rails/app/controllers/submission_controller.rb
	(SubmissionController::person): Add @dc_conference_person
	(SubmissionController::save_event): save event_license.
	(SubmissionController::save_person): Save dc_person and dc_conference_person
	(SubmissionController::save_person): Make sure boolean fields get
	saved if toggled off

2008-01-26  Joerg Jaspert  <joerg@debian.org>

	* rails/app/views/submission/_person_contact.rxml: add
	emergency_contact back
